--- a/index.html
+++ b/index.html
@@ -1,10 +1,142 @@
 <!DOCTYPE html>
     <html>
         <title> wy的网页</title>
-        <body>
-            <h2>    欢迎进入wy的网页</h2>
-            <p>
-                    虽然这个网页上还什么都没有，但是我相信在以后的努力下这个网站会有许多的东西的
-            </p>
-        </body>
+        <iframe>
+            <body>
+                <h1>欢迎进入wy的网页</h2>
+                <p style="color: #bfbfbf;">
+                    主包的这个网站就用来传小说吧！
+                </p style="color: #bfbfbf;">
+                <!-- 因为主包实在是想不到能干嘛了-->
+            </body>
+        </iframe>
+        <iframe>
+            <body>
+                <h2>引子 人物设定(后面出现新人物会补)</h2>
+                <code>
+                    <p>
+                        *****特别说明：本文中所有人物皆为虚构，无现实原型*****
+
+                        本文恋爱:日常:番外:上课比例大概为2:5:1:2，在每个3倍数章节后面会有小剧场，一般字数在100-1000字左右
+
+                        作者声明：这是双男主！双男主！双男主！不喜勿喷，打了标签的，马甲文
+
+                        本文是校园文，剧情发展较慢，感情线前中期极慢，受掉马后很快
+
+                        本文有副cp，但是占的篇幅较少
+
+                        后面可能会出副cp的番外(主要是看我更新速度了)
+
+                        ------------------------
+
+                        特别声明：作者更新极慢，就像我简介里的那样，而且文笔不好，这是我写的第一本哦~大家可以支持一下吗？~
+
+                        -------------------------
+
+                        设定:
+
+                        {高一五班人物}
+
+                        【陈俞】：软糯学神，与萧贺怊网恋，但是萧贺怊并不知道他就是玉玉，喜欢编程，精通c语言，python，c#等，网名：玉玉（有妙用）
+
+                        【萧贺怊】：高冷校霸，与陈俞网恋，但是陈俞并不知道他就是朝朝，爱好打篮球运动，网名：朝朝
+
+                        【班主任】：原名杜龚，萧贺怊唯一有好感的老师，教学能力极好
+
+                        【历史老师】：原名王利强，外号强哥，上课简直是催眠曲
+
+                        【体育老师】：原名嵩明周，歧视二次元，人品恶劣，仗势欺人
+
+                        【英语老师】：原名谭军，外号基诺，极其严厉，但人品以及教学能力较强
+
+                        【生物老师】：原名曾旭，说话一惊一乍，外号惊炸姐，但人很好
+
+                        【音乐老师】：原名黄珊珊，教学能力不好，但是规矩立的很足，导致同学很不喜欢
+
+                        【沐云溪】：五班班长，和萧贺怊不对付，在私底下组建小团体
+
+                        【胡卒亥】：5班最皮的人，经常被叫进办公室
+
+                        {高一一班人物}
+
+                        【黄子翔】：音乐特长生，男高音，与陈俞有相同爱好，玩的好
+
+                        【黄柯佳】：顶级绿茶，与江浅浅关系好(绿茶双人组哈)
+
+                        {高一二班人物}
+
+                        【张涵】：和沐云溪玩的好，到处qq别人
+
+                        【楚苒】：二班的是二班老师的走狗，总是帮其通风报信，所以威信极差
+
+                        {高一三班人物}
+
+                        【汪珍瑶】：跟四班的刘溪语(男)是好闺蜜，与沐玉溪等人不对付
+
+                        {高一四班人物}
+
+                        【刘溪语】：与陈辰为cp（本文副cp），热爱画画
+
+                        【陈辰】：热爱运动，是萧贺怊的得力干将
+
+                        {高一六班人物}
+
+                        【江浅浅】：绿茶一个，希望讨得萧贺怊欢心
+
+                        【何睿琦】：陈俞转来之前成绩一直是第一，陈俞来之后变第二了，所以对陈俞怀恨在心
+
+                        {其他人物}
+
+                        【宿管A】：较为温柔，如违规只口头教育
+
+                        【宿管B】：很严厉，经常口出脏话，还有殴打学生现象
+
+                        【陈晓旭】：陈俞哥哥，就读于C市大学，因为父母没空所以一般是他在照顾陈俞
+
+                        .......（有待补充）
+
+                        ----------------------
+
+                        阵营分配：
+
+                        【主角团】：陈俞，萧贺怊，刘溪语，陈辰，黄子翔
+
+                        【绿茶二人组】：江浅浅，黄柯佳
+
+                        【校园反派组】：沐云溪，何睿琦，张涵...
+
+                        【教师反派组】：嵩明周，黄珊珊，谭晓军，王利强
+
+                        【教师中立组】：杜垄，曾旭...
+
+                        【校园中立组】：胡卒亥...
+
+                        --------------------------
+
+                        本文前期的发展很慢很慢，后期才慢慢甜起来
+
+                        主cp的篇幅占比最多，副cp则较少，占比大概为9:1
+
+                        本文可能涉及一些学校的人情世故，主角有可能会被我写的很心机，见谅
+
+                        -----------------------
+
+                        主cp：【陈俞】×【萧贺怊】【软糯学神受】×【高冷校霸攻】
+
+                        副cp：【刘溪语】×【陈辰】【画画天才】×【篮球主力】
+
+                        -------------------
+
+                        人物背景(暂时不多，后面想你再补)：
+
+                        【陈俞】：父母是医药企业公司高管，所以经常没时间照顾陈俞，所以陈俞从小到大都是他哥哥陈晓旭带大的
+
+                        【萧贺怊】：父亲是一名军人，母亲早逝，导致萧贺怊没人管制，所以在陈俞到来之前一直都是小混混的形象，在社会上结识的人很多，比较权威呀
+
+                        【黄子祥】：父母都是公务员，但是他想成为男高音声乐歌唱者
+                    </p>
+                </code>
+            </body>
+        </iframe>
+
     </html>
