--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
                 <p style="color: #bfbfbf;">
                     主包的这个网站就用来传小说吧！
                 </p style="color: #bfbfbf;">
+                <a href="//fanqienovel.com/page/7474302787405237310" target="_blank" rel="noopener">小说地址(番茄)</a>
                 <!-- 因为主包实在是想不到能干嘛了-->
         <br>
                 <h2>引子 人物设定(后面出现新人物会补)</h2>
